2003-01-13  Christian Neumair  <chris@gnome-de.org>

	* de.po: Updated German translation.

2003-01-13  Artis Trops  <hornet@navigator.lv>

        * lv.po: Updated Latvian translation.
	
2003-01-12  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-01-12  Artis Trops  <hornet@navigator.lv>

        * lv.po: Updated Latvian translation.

2003-01-12  Jordi Mallach  <jordi@sindominio.net>

	* ca.po: Updated Catalan translation.

2003-01-09  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2003-01-09  Christian Neumair  <chris@gnome-de.org>

	* de.po: Updated German translation.

2003-01-09  Artis Trops  <hornet@navigator.lv>

        * lv.po: Updated Latvian translation.   

2003-01-08  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2003-01-07  Christian Rose  <menthos@menthos.com>

	* POTFILES.in: Removed entries for non-existing files.
	* sv.po: Updated Swedish translation.

2003-01-06  Bastien Nocera  <hadess@hadess.net>

	* POTFILES.in: adding the files that are present in libbacon, they need
	translation as well

2003-01-05  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* vi.po: Updated Vietnamese file

2003-01-04  Ole Laursen  <olau@hardworking.dk>

	* da.po: Updated Danish translation.

2003-01-03  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian (bokmal) translation.
	
2002-12-29  Kjartan Maraas  <kmaraas@gnome.org>

	* no.po: Updated Norwegian (bokmal) translation.
	
2002-12-29  Christian Neumair  <chris@gnome-de.org>
	
	* de.po: Updated German translation.

2002-12-28  Artis Trops  <hornet@navigator.lv>

	* lv.po: Updated Latvian translation.

2002-12-28  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.

2002-12-26  Pablo Saratxaga  <pablo@mandrakesoft.com>

	* vi.po: Updated Vietnamese file

2002-12-26  Christian Rose  <menthos@menthos.com>

	* sv.po: Updated Swedish translation.
