@@ -5,8 +5,10 @@ data/properties.glade
 data/totem.desktop.in
 data/totem.glade
 data/totem.schemas.in
-src/gtk-playlist.c
-src/gtk-xine.c
 src/bacon-cd-selection.c
 src/cd-drive.c
+src/gnome-authn-manager.c
+src/gnome-password-dialog.c
+src/gtk-playlist.c
+src/gtk-xine.c
 src/totem.c
