@@ -1,2 +1,3 @@
+data/totem-video-thumbnail.schemas.in
 src/egg-recent-vfs-utils.c
 src/input_gnomevfs.c
