@@ -1,3 +1,8 @@
+2003-01-14  Bastien Nocera  <hadess@hadess.net>
+
+	* POTFILES.in:
+	* POTFILES.skip: update to add the GNOME authentication dialog
+
 2003-01-13  Christian Neumair  <chris@gnome-de.org>
 
 	* de.po: Updated German translation.
